# 3d-printer-front-end

./: Cargo.toml
src/: gcode_parser.rs  interface.rs  lib.rs  main.rs
src/gfx/: camera.rs  gcode_render.rs  graphics_context.rs  mod.rs  quad_gen.wgsl  quad_render.wgsl  quad_render_fs.wgsl  quad_render_vs.wgsl  render.rs
