[package]
name = "euclid_front_end"
version = "0.1.0"
edition = "2024"

[dependencies]
#wgpu = "0.25"
#winit = "0.30.13"
#imgui = "0.12.0"
#imgui-winit-support = "0.13.0"
#imgui-wgpu = "0.25.0"

wgpu = "25"
winit = "0.30"
imgui = "0.12"
imgui-winit-support = "0.13.0"
imgui-wgpu = "0.25.0"

pollster = "0.4.0"
glam = "0.32.1"
bytemuck = "1.25.0"
