[package]
name = "euclid_front_end"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "25"
winit = "0.30"
imgui = "0.12"
imgui-winit-support = "0.13.0"
imgui-wgpu = "0.25.0"
#egui = "0.34.1"
#egui-wgpu = "0.34.1"
#egui-winit = "0.34.1"

pollster = "0.4.0"
glam = "0.32.1"
bytemuck = "1.25.0"
gcode = "0.6.1"
rfd = "0.17.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "Document", "Window", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
# Replacement for std::time::Instant which doesn't work in Wasm
web-time = "1.1"
